# T1-hackathon-2024

./: README.md
backend/: bentofile.yaml  pyproject.toml  russian.txt
backend/src/: dto.py  main.py  utils.py
backend/src/model/: ocr_transformer.py
backend/trained_models/: checkpoint_131.pt  checkpoint_153.pt  checkpoint_155.pt
docker/: docker-compose.yml
frontend/: Dockerfile.frontend  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/Form/: index.svelte
frontend/src/lib/components/Header/: index.svelte
frontend/src/lib/components/Result/: fake_data.js  index.svelte
frontend/src/lib/components/Uploader/: index.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/store/: result_store.js
nginx/: nginx.conf
notebooks/: t1_hack.ipynb  transformer_train.py
