[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bentoml = "^1.3.9"
pillow = "^11.0.0"
pydantic = "^2.9.2"
numpy = "^2.1.2"
ultralytics = "^8.3.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
