[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bentoml = "^1.3.9"
pillow = "^11.0.0"
pydantic = "^2.9.2"
numpy = "^2.1.2"
ultralytics = "^8.3.23"
transformers = "^4.46.0"
datasets = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
